<resources>
    <string name="app_name">FIndPair</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play">Играть</string>
    <string name="background_3">Background #3</string>
    <string name="background_6">Background №6</string>
    <string name="i_less_time_more_reward">Меньше времени, больше награды</string>
    <string name="keep_matching_up_two_of_the_same_object_until_there_are_no_more_to_be_paired">Продолжайте совмещать два одинаковых объекта до тех пор, пока не останется пар</string>
    <string name="fast">fast</string>
    <string name="congratulation">Поздравляем!</string>
    <string name="great_you_won">Отлично! Ты выиграл!</string>
    <string name="double_reward">Двойная награда</string>
    <string name="max_coins">100</string>
    <string name="statistics">Статистика</string>
    <string name="menu">Меню</string>
    <string name="no_saved_games">Нет сохраненных игр</string>
    <string name="date">&lt;b>Время игры:&lt;/b> %s</string>
    <string name="timespent">&lt;b>Время затрачено:&lt;/b> %s сек</string>
    <string name="profit">&lt;b>Выигрыш:&lt;/b> %s монет</string>
    <string name="total_games">&lt;b>Всего игр:&lt;/b> %s</string>
</resources>