<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.end.EndGameFragment">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/trophy" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/congratulation"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/great_you_won"
            android:layout_marginTop="15dp"
            android:textSize="20sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:backgroundTint="#FFE2E2E2"
            app:cardCornerRadius="30dp"
            android:layout_marginTop="15dp">

            <FrameLayout
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <androidx.cardview.widget.CardView
                    android:id="@+id/circleMoney"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="start|center_vertical"
                    android:backgroundTint="#FFFED500"
                    app:cardCornerRadius="15dp" />

                <TextView
                    android:id="@+id/money"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:textSize="25sp" />

            </FrameLayout>

        </androidx.cardview.widget.CardView>

        <FrameLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/doubleReward"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:textAllCaps="true"
                android:layout_gravity="start|center_vertical"
                android:text="@string/double_reward" />

            <androidx.cardview.widget.CardView
                android:id="@+id/home"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="end|center_vertical"
                android:backgroundTint="#FFE2E2E2"
                app:cardCornerRadius="15dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="end|center_vertical"
                    android:background="#FFE2E2E2"
                    android:src="@drawable/home"
                    android:contentDescription="@string/menu" />

            </androidx.cardview.widget.CardView>

        </FrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>