<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.game.GameFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/infoContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        app:layout_constraintStart_toStartOf="@id/items"
        app:layout_constraintEnd_toEndOf="@id/items"
        app:layout_constraintBottom_toTopOf="@id/items">

        <ImageView
            android:id="@+id/alarm"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/baseline_alarm_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@id/alarm"
            app:layout_constraintBottom_toBottomOf="@id/alarm"
            app:layout_constraintStart_toEndOf="@id/alarm"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:text="@string/i_less_time_more_reward"
            app:layout_constraintTop_toBottomOf="@id/alarm"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/circleMoney"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:backgroundTint="#FFFED500"
            app:cardCornerRadius="15dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/money"/>

        <TextView
            android:id="@+id/money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/max_coins"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/circleMoney"
            app:layout_constraintBottom_toBottomOf="@id/circleMoney"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/items"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_marginTop="50dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:spanCount="4"
        tools:listitem="@layout/item" />

    <TextView
        android:id="@+id/keepMatching"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/keep_matching_up_two_of_the_same_object_until_there_are_no_more_to_be_paired"
        app:layout_constraintTop_toBottomOf="@id/items"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>